GNU tar NEWS - User visible changes. 2025-11-09
Please send GNU tar bug reports to <bug-tar@gnu.org>

version 1.35.90 (git)

* New manual section "Reproducibility", for reproducible tarballs.

* New options: --set-mtime-command and --set-mtime-format

Both options are valid when archiving files.

** --set-mtime-command=COMMAND

For each FILE being archived, run "COMMAND FILE", parse its
output as time string and set mtime value of the archive member
from the result.

Unless --set-mtime-format is also used, the output is parsed
as argument to --mtime option (see GNU tar manual, chapter 4
"Date input formats".

** --set-mtime-format=FMT

Defines output format for the COMMAND set by the above option.  If
used, command output will be parsed using strptime(3).

* Skip file or archive member if transformed name is empty

If applying file name transformations (--transform and
--strip-component options) to a file or member name results in an
empty string that file or member is skipped and a warning is printed.

The warning can be suppressed using the --warning=empty-transform
option.

* Bug fixes

** Fixed O(n^2) time complexity bug for large numbers of directories when
   extracting with --delay-directory-restore or reading incremental archives.

** tar no longer uses alloca, fixing an unlikely stack overflow.

** When diagnosing invalid extended headers tar now quotes control characters.

** Transformations that change case (e.g., --transform='s/.*/\L&/')
   now work correctly with multi-byte characters.

** --no-overwrite-dir no longer changes permissions of existing directories,
   not even temporarily.  This matches the documentation better and avoids
   some permissions glitches.

** tar no longer fails merely if an extraction directory is unreadable
   on Linux kernels.

** tar now works better in strict debugging environments that do not
   allow pointer arithmetic to escape from a sub-element of an array.

* Performance improvements
